Revision history for LCS

{{$NEXT}}

0.06  2015-05-26 06:36:32 CEST
        - release

0.05  2015-05-25 21:52:40 CEST
        - improved backwards compatibility

0.04  2015-05-19 22:55:36 CEST
        - downgrade minimum Perl version

0.03  2015-05-09 11:17:41 CEST
        - added benchmarks
        - loopified recursions

0.02  2015-05-06 07:10:53 CEST
        - added tests

0.01  2015-05-03 20:30:11 CEST
        - Initial release