@@ -1,6 +1,7 @@
 Revision history for LCS
 
 {{$NEXT}}
+        - added spelling test
 
 0.06  2015-05-26 06:36:32 CEST
         - release
